--- a/Views/Employee/List.cshtml
+++ b/Views/Employee/List.cshtml
@@ -38,7 +38,7 @@
                 </div>
                 <div class="form-group">
                     <div class="input-group input-group-lg">
-                        <input type="search" class="form-control form-control-lg" id="searchInput" placeholder="Type Employee Name" autofocus onfocus="search()" onkeyup="search()">
+                        <input type="search" class="form-control form-control-lg" id="searchInput" placeholder="Type Employee Name" autofocus onkeyup="search()">
                         <div class="input-group-append">
                             <button type="button" class="btn btn-lg btn-default" onclick="search()">
                                 <i class="fa fa-search"></i>
@@ -55,7 +55,7 @@
 
 
 @section Scripts {
-
+            
     <script>
         // Store all positions in JavaScript
         const allPositions = Array.from(document.getElementById('positionSelect').options).map(option => ({
@@ -104,6 +104,7 @@
   
 
     <script>
+        window.onload = search;
         function search() {
             const departmentId = document.getElementById('departmentSelect').value;
             const positionId = document.getElementById('positionSelect').value;
