--- a/Views/Search/EmployeeSearchResult.cshtml
+++ b/Views/Search/EmployeeSearchResult.cshtml
@@ -17,7 +17,7 @@
         <table class="table table-striped projects">
             <thead>
                 <tr>
-                    <th style="width: 15%">
+                    <th style="width: 13%">
                         Inernal Number
                     </th>
                     <th>
@@ -78,8 +78,8 @@
                             }
                             
                         </td>
-                        <td class="project-actions text-right">                           
-                            <a class="btn btn-info btn-sm" href="#">
+                        <td class="project-actions text-right">
+                                <a asp-controller="Employee" asp-action="Details" asp-route-employeeId="@employee.EmployeeId" class="btn btn-info btn-sm">
                                 <i class="fas fa-business-time">
                                 </i>
                                 &ensp;Details
