--- a/Views/Owner/AddOwner.cshtml
+++ b/Views/Owner/AddOwner.cshtml
@@ -118,7 +118,7 @@
                             <div class="col-md-6">
                             </div>
                             <div class="col-md-6">
-                                <button type="button" class="btn btn-info btn-block" id="addOwnerButton"><i class="fas fa-save"></i> Save Ship Information</button>
+                                <button type="button" class="btn btn-info btn-block" id="addOwnerButton"><i class="fas fa-save"></i> Save Owner Information</button>
 
                             </div>
 
