--- a/Views/Search/EmployeeSearchResult.cshtml
+++ b/Views/Search/EmployeeSearchResult.cshtml
@@ -9,7 +9,7 @@
 
 <div class="card">
     <div class="card-header">
-        <h3 class="card-title">Employee List</h3>
+        <h3 class="card-title">Maintenance List</h3>
 
        
     </div>
