--- a/Views/Ship/Details.cshtml
+++ b/Views/Ship/Details.cshtml
@@ -352,9 +352,9 @@
 
 
 @section Scripts {
-
-<script>
     
+
+<script>    
     $(function () {
 
         $('.select2').select2();
@@ -367,7 +367,7 @@
 
     $('#launchDate').datetimepicker({
 
-        format: 'L'
+            format: 'DD.MM.YYYY'
     });
 
 
