Equipment add added

--- a/Views/Equipment/Details.cshtml
+++ b/Views/Equipment/Details.cshtml
@@ -164,7 +164,7 @@
                                     <div class="row">
                                         <div class="col-md-2"></div>
                                         <div class="col-md-8">
-                                            <a asp-controller="Equipment" asp-action="Details" asp-route-equipmentId="@Model.ShipEquipmentId" class="card card-outline card-success btn-block shadow" style="padding:0; text-align:left; background-color:transparent;">
+                                            <a class="card card-outline card-success btn-block shadow" style="padding:0; text-align:left; background-color:transparent;">
                                                 <img alt="" style="height: 180px; width: 100%; display: block;" src="@Model.PhotoUrl" data-holder-rendered="true">
                                                 <div class="card-body">
                                                     <dl>
