--- a/Views/Maintenance/List.cshtml
+++ b/Views/Maintenance/List.cshtml
@@ -1,16 +1,17 @@
 ﻿@{
     ViewData["Title"] = "Maintenance List";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
-    
+    Ship ship = ViewBag.Ship;
 }
+
+<div>
+    @await Html.PartialAsync("_ShipDetailsHeadMenu", ship)
+</div>
 
 @model IEnumerable<MaintenanceRecord>
 @if (Model.Count() > 0)
 {
-    <div>
-        @await Html.PartialAsync("_ShipDetailsHeadMenu", Model.First().ShipEquipment.Ship)
-    </div>
-
+    
     <div class="card card-info card-outline">
         <div class="card-header">
             <h3 class="card-title"><i class="fas fa-wrench"></i> &ensp; Maintenance Records</h3>
